# BlackHole

./: CMakeLists.txt  README.md
shaders/: blackhole.metal
src/: camera.hpp  geodesics.cpp  geodesics.hpp  grid.hpp  main.mm  renderer.hpp  renderer.mm
